--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.2",
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4"
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "jest": "^25.1.0"
@@ -32,22 +29,12 @@
       "*.spec.js"
     ]
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
   "jest": {
     "testEnvironment": "node"
   },
   "scripts": {
-    "start": "npm run build && npm run prod",
-    "build": "npm run clean && npm run transpile",
-    "server": "node ./dist-server/bin/www.js",
-    "dev": "NODE_ENV=development npm run server",
-    "prod": "NODE_ENV=production npm run server",
-    "transpile": "babel ./server --out-dir dist-server",
-    "clean": "rm -rf dist-server",
+    "start": "NODE_ENV=production node ./server/bin/www.js",
+    "dev": "NODE_ENV=development node ./server/bin/www.js",
     "watch:dev": "nodemon",
     "test": "jest"
   }
