--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "express-es6-sample",
   "version": "0.2.0",
+  "type": "module",
   "private": true,
   "author": {
     "name": "Jonathan Cunanan",
